implementation of getProfilePic per id